--- a/e-commerce/frontend/src/index.css
+++ b/e-commerce/frontend/src/index.css
@@ -15,7 +15,11 @@ body {
 img {
   content-visibility: auto;
 }
-
+.home{
+    background: url("assets/image.png") no-repeat;
+    background-position: center;
+    background-size: cover;
+}
 button, input, select, textarea {
   font: inherit;
 }
